--- a/package.json
+++ b/package.json
@@ -3,17 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-router-dom": "^5.1.0",
+    "@types/redux-localstorage": "^1.0.8",
+    "@types/redux-localstorage-filter": "^0.1.4",
+    "material-design-icons": "^3.0.1",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.3"
+    "redux": "^4.0.4",
+    "redux-localstorage": "^0.4.1",
+    "redux-localstorage-filter": "^0.1.1",
+    "typescript": "3.6.3",
+    "uuid": "^3.3.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " set VERSION=node -e 'Math.random()' &&  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -32,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.2",
+    "redux-devtools": "^3.5.0"
   }
 }
